# pyo3

./: .gitignore  Architecture.md  BENCHMARKS.md  CHANGELOG.md  CLARAX_CORE_PLAN.md  CLARAX_ROADMAP.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  HEALTH_REPORT.md  IMPROVEMENTS.md  INNOVATION_PROPOSALS.md  PYFORGE_ROADMAP.md  README.md  RENAME_PLAN.md  UPGRADING.md  build.rs  linkedin-article.md  publish-crates.sh  publish-pypi.sh  publish.sh  pyproject.toml
.github/: CONTRIBUTING.md  labels.yml  pull_request_template.md
benchmarks/: README.md  bench_serializer_comparison.py  bench_validator_comparison.py
clarax-benches/: Cargo.toml  build.rs
clarax-build-config/: Cargo.toml
clarax-build-config/src/: impl_.rs  lib.rs
clarax-core/: Cargo.toml  README.md  pyproject.toml
clarax-core/clarax_core/: __init__.py  __init__.pyi  auto_schema.py  constraints.py
clarax-core/src/: engine_serialize.rs  engine_validate.rs  error.rs  lib.rs  types.rs
clarax-django/: Cargo.toml  README.md  pyproject.toml
clarax-django/benches/: bench_field_types.rs  bench_serializer.rs  bench_validator.rs
clarax-django/django_clarax/: __init__.py  __init__.pyi  apps.py  middleware.py  serializers.py  serializers.pyi  validators.py  validators.pyi
clarax-django/django_clarax/management/commands/: pyforge_doctor.py
clarax-django/src/: async_bridge.rs  error.rs  field_types.rs  lib.rs  model.rs  serializer.rs  validator.rs
clarax-django/tests/: __init__.py  conftest.py  test_model_schema.py  test_serialize_instance.py
clarax-django/tests/django_app/: models.py  settings.py
clarax-ffi/: Cargo.toml  README.md  build.rs
clarax-ffi-check/: Cargo.toml  README.md  build.rs
clarax-ffi-check/definitions/: Cargo.toml  build.rs
clarax-ffi-check/macro/: Cargo.toml
clarax-ffi-check/macro/src/: lib.rs
clarax-ffi/examples/: README.md
clarax-ffi/examples/sequential/: Cargo.toml  README.md
clarax-ffi/examples/sequential/.template/: Cargo.toml
clarax-ffi/examples/string-sum/: Cargo.toml  README.md
clarax-ffi/examples/string-sum/.template/: Cargo.toml
clarax-ffi/examples/string-sum/src/: lib.rs
clarax-ffi/src/: boolobject.rs  bytesobject.rs  ceval.rs  datetime.rs  dictobject.rs  floatobject.rs  intrcheck.rs  lib.rs  memoryobject.rs  object.rs  osmodule.rs  pymem.rs  pystate.rs  rangeobject.rs  refcount.rs  sliceobject.rs  traceback.rs  unicodeobject.rs  weakrefobject.rs
clarax-ffi/src/compat/: mod.rs
clarax-ffi/src/cpython/: bytesobject.rs  ceval.rs  genobject.rs  listobject.rs  lock.rs  methodobject.rs  pyhash.rs  pymem.rs  unicodeobject.rs
clarax-ffi/src/impl_/: macros.rs
clarax-introspection/: Cargo.toml
clarax-introspection/src/: introspection.rs  lib.rs  model.rs
clarax-introspection/tests/: test.rs
clarax-macros/: Cargo.toml
clarax-macros-backend/: Cargo.toml
clarax-macros/src/: lib.rs
examples/: Cargo.toml  README.md
guide/: pyclass-parameters.md
pyforge-benches/: Cargo.toml  build.rs
pyforge-build-config/: Cargo.toml
pyforge-core/: Cargo.toml  README.md  pyproject.toml
pyforge-core/pyforge_core/: __init__.py  __init__.pyi
pyforge-core/src/: error.rs  lib.rs  types.rs
pyforge-django/: Cargo.toml  README.md  pyproject.toml
pyforge-django/benches/: bench_field_types.rs  bench_serializer.rs  bench_validator.rs
pyforge-django/django_pyforge/: __init__.py  apps.py  serializers.py  serializers.pyi
pyforge-django/src/: async_bridge.rs  error.rs  field_types.rs  lib.rs  model.rs  serializer.rs  validator.rs
pyforge-django/tests/: conftest.py  test_model_schema.py  test_serialize_instance.py
pyforge-django/tests/django_app/: models.py  settings.py
pyforge-ffi/: Cargo.toml  README.md  build.rs
pyforge-ffi-check/: Cargo.toml  README.md  build.rs
pyforge-ffi-check/definitions/: Cargo.toml
pyforge-ffi-check/macro/: Cargo.toml
pyforge-ffi-check/macro/src/: lib.rs
pyforge-introspection/: Cargo.toml
pyforge-introspection/src/: introspection.rs  lib.rs  model.rs
pyforge-introspection/tests/: test.rs
pyforge-macros/: Cargo.toml
pyforge-macros-backend/: Cargo.toml
pyforge-macros-backend/src/: introspection.rs  konst.rs  method.rs  module.rs  py_expr.rs  pyclass.rs  pyfunction.rs  pyimpl.rs  pymethod.rs  utils.rs
pyforge-macros/src/: lib.rs
pyo3-benches/: Cargo.toml
pyo3-ffi/: Cargo.toml  build.rs
pyo3-ffi-check/: Cargo.toml
pyo3-ffi/examples/sequential/: Cargo.toml
pyo3-ffi/examples/string-sum/: Cargo.toml
pyo3-ffi/src/: abstract_.rs  bytearrayobject.rs  complexobject.rs  dictobject.rs  fileobject.rs  floatobject.rs  import.rs  lib.rs  listobject.rs  longobject.rs  methodobject.rs  object.rs  objimpl.rs  pybuffer.rs  pyerrors.rs  pythonrun.rs  setobject.rs  structseq.rs  warnings.rs  weakrefobject.rs
pyo3-ffi/src/compat/: py_3_13.rs
pyo3-ffi/src/cpython/: abstract_.rs  compile.rs  complexobject.rs  descrobject.rs  dictobject.rs  frameobject.rs  funcobject.rs  import.rs  objimpl.rs  pyerrors.rs  pystate.rs  pythonrun.rs  unicodeobject.rs  weakrefobject.rs
pyo3-ffi/src/impl_/: macros.rs
pyo3-macros/: Cargo.toml
pyo3-macros/src/: lib.rs
pytests/: Cargo.toml  MODULE_DOC.md  README.md  build.rs
pytests/src/: awaitable.rs  buf_and_str.rs  comparisons.rs  consts.rs  datetime.rs  dict_iter.rs  enums.rs  exception.rs  lib.rs  misc.rs  objstore.rs  othermod.rs  path.rs  pyclasses.rs  pyfunctions.rs  sequence.rs  subclassing.rs
src/: conversion.rs  coroutine.rs  exceptions.rs  fmt.rs  impl_.rs  inspect.rs  instance.rs  internal.rs  interpreter_lifecycle.rs  lib.rs  macros.rs  marker.rs  marshal.rs  prelude.rs  pycell.rs  pyclass.rs  pyclass_init.rs  sealed.rs  sync.rs  test_utils.rs  version.rs
tests/: test_anyhow.rs  test_append_to_inittab.rs  test_arithmetics.rs  test_buffer.rs  test_buffer_protocol.rs  test_bytes.rs  test_class_attributes.rs  test_class_basics.rs  test_class_comparisons.rs  test_class_conversion.rs  test_class_formatting.rs  test_class_init.rs  test_class_new.rs  test_coroutine.rs  test_datetime.rs  test_datetime_import.rs  test_declarative_module.rs  test_default_impls.rs  test_enum.rs  test_gc.rs  (+27 more)
(+328 files in other folders)
