[project]
requires-python = ">=3.11"
name = "pyforge"
version = "0.2.0"
description = "High-performance Rust-Python bindings for Django 5.x"
authors = [{name = "Abdulwahed Mansour"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/abdulwahed-sweden/pyforge"
Repository = "https://github.com/abdulwahed-sweden/pyforge"

[tool.ruff.per-file-target-version]
"*.pyi" = "py311"
"pytests/tests/test_enums_match.py" = "py310"

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F403"]

[tool.rumdl]
disable = ["MD033", "MD051"]
exclude = [
    "guide/src/changelog.md",
    "guide/src/contributing.md"
]

[tool.rumdl.per-file-ignores]
"guide/pyclass-parameters.md" = ["MD041"]

[tool.rumdl.MD004]
style = "dash"

[tool.rumdl.MD013]
line_length = 0
code_blocks = false
tables = false
headings = false
reflow = true
reflow_mode = "sentence-per-line"

[tool.uv]
package = false

[dependency-groups]
dev = ["rumdl"]
