# Author: Abdulwahed Mansour
[package]
name = "clarax-core"
version = "0.3.1"
edition = "2021"
authors = ["Abdulwahed Mansour"]
description = "Rust-accelerated serialization and validation for Python — framework-agnostic"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/clarax"
keywords = ["python", "serialization", "validation", "rust", "performance"]
categories = ["api-bindings", "web-programming"]
rust-version = "1.83"

[lib]
name = "clarax_core"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
clarax-build-config = { path = "../clarax-build-config", version = "0.3.0" }

[dependencies]
clarax = { path = "..", version = "0.3.0", features = ["macros", "chrono", "rust_decimal", "uuid", "serde"] }
# Shim so maturin detects pyo3 bindings (clarax is a pyo3 fork)
pyo3 = { path = "../pyo3-shim", version = "0.3.0", optional = true }
chrono = { version = "0.4.25", features = ["serde"] }
rust_decimal = { version = "1.15", features = ["serde-with-str"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.6"
thiserror = "2"

[dev-dependencies]
clarax = { path = "..", version = "0.3.0", features = ["macros", "auto-initialize", "chrono", "rust_decimal", "uuid", "serde"] }

[lints]
workspace = true
