# Author: Abdulwahed Mansour
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "clarax-core"
version = "0.3.1"
description = "Rust-accelerated serialization and validation for Python — framework-agnostic"
readme = "README.md"
authors = [{ name = "Abdulwahed Mansour" }]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/abdulwahed-sweden/clarax"
Repository = "https://github.com/abdulwahed-sweden/clarax"

[tool.maturin]
# clarax is a renamed pyo3 fork — override auto-detection
bindings = "pyo3"
features = ["pyo3"]
module-name = "clarax_core._native"
python-packages = ["clarax_core"]
