[package]
name = "clarax-ffi"
version = "0.3.0"
description = "CPython 3.11+ C-API bindings for the ClaraX ecosystem"
authors = ["Abdulwahed Mansour"]
keywords = ["clarax", "python", "cpython", "ffi"]
homepage = "https://github.com/abdulwahed-sweden/clarax"
repository = "https://github.com/abdulwahed-sweden/clarax"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
edition = "2021"
links = "python"
rust-version.workspace = true

[dependencies]
libc = "0.2.62"

[features]

default = []

# Use the Python limited API. See https://www.python.org/dev/peps/pep-0384/ for more.
abi3 = ["clarax-build-config/abi3"]

# With abi3, set minimum Python version. ClaraX requires 3.11+.
abi3-py311 = ["abi3-py312", "clarax-build-config/abi3-py311"]
abi3-py312 = ["abi3-py313", "clarax-build-config/abi3-py312"]
abi3-py313 = ["abi3-py314", "clarax-build-config/abi3-py313"]
abi3-py314 = ["abi3", "clarax-build-config/abi3-py314"]

[dev-dependencies]
paste = "1"

[build-dependencies]
clarax-build-config = { path = "../clarax-build-config", version = "=0.3.0", features = ["resolve-config"] }

[lints]
workspace = true

[package.metadata.cpython]
min-version = "3.11"
max-version = "3.15" # inclusive
