[package]
name = "clarax-macros"
version = "0.3.0"
description = "Proc macros for ClaraX — modern Python-Rust bindings"
authors = ["Abdulwahed Mansour"]
keywords = ["clarax", "python", "cpython", "ffi"]
homepage = "https://github.com/abdulwahed-sweden/clarax"
repository = "https://github.com/abdulwahed-sweden/clarax"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
edition = "2021"
rust-version.workspace = true

[lib]
proc-macro = true

[features]
multiple-pymethods = []
experimental-async = ["clarax-macros-backend/experimental-async"]
experimental-inspect = ["clarax-macros-backend/experimental-inspect"]

[dependencies]
proc-macro2 = { version = "1.0.60", default-features = false }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
clarax-macros-backend = { path = "../clarax-macros-backend", version = "=0.3.0" }

[lints]
workspace = true
