[package]
name = "pyforge-ffi-check"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pyforge-ffi-check-definitions = { path = "definitions" }
pyforge-ffi-check-macro = { path = "macro" }

[build-dependencies]
pyforge-build-config = { path = "../pyforge-build-config" }

[workspace]
members = [
    "definitions",
    "macro"
]
