[package]
name = "pyforge-introspection"
version = "0.1.0"
description = "Introspect dynamic libraries built with PyForge to extract Python type metadata"
authors = ["Abdulwahed Mansour"]
homepage = "https://github.com/abdulwahed-sweden/pyforge"
repository = "https://github.com/abdulwahed-sweden/pyforge"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1"
goblin = ">=0.9, <0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.12.0"

[lints]
workspace = true
