[package]
name = "pyforge-macros-backend"
version = "0.2.0"
description = "Code generation backend for PyForge macros"
authors = ["Abdulwahed Mansour"]
keywords = ["pyforge", "python", "cpython", "ffi"]
homepage = "https://github.com/abdulwahed-sweden/pyforge"
repository = "https://github.com/abdulwahed-sweden/pyforge"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
edition = "2021"
rust-version.workspace = true

# Note: we use default-features = false for proc-macro related crates
# not to depend on proc-macro itself.
# See https://github.com/PyO3/pyo3/pull/810 for more.
[dependencies]
heck = "0.5"
proc-macro2 = { version = "1.0.60", default-features = false }
quote = { version = "1.0.37", default-features = false }

[dependencies.syn]
# 2.0.59 for `LitCStr`
version = "2.0.59"
default-features = false
features = ["derive", "parsing", "printing", "clone-impls", "full", "extra-traits", "visit-mut"]

[lints]
workspace = true

[features]
experimental-async = []
experimental-inspect = []
