[package]
name = "pyforge-macros"
version = "0.2.0"
description = "Proc macros for PyForge — modern Python-Rust bindings"
authors = ["Abdulwahed Mansour"]
keywords = ["pyforge", "python", "cpython", "ffi"]
homepage = "https://github.com/abdulwahed-sweden/pyforge"
repository = "https://github.com/abdulwahed-sweden/pyforge"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT"
edition = "2021"
rust-version.workspace = true

[lib]
proc-macro = true

[features]
multiple-pymethods = []
experimental-async = ["pyforge-macros-backend/experimental-async"]
experimental-inspect = ["pyforge-macros-backend/experimental-inspect"]

[dependencies]
proc-macro2 = { version = "1.0.60", default-features = false }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
pyforge-macros-backend = { path = "../pyforge-macros-backend", version = "=0.2.0" }

[lints]
workspace = true
