[package]
authors = ["Abdulwahed Mansour"]
name = "pyo3-pytests"
version = "0.1.0"
description = "Python-based tests for PyForge"
edition = "2021"
publish = false
rust-version = "1.83"

[features]
experimental-async = ["pyforge/experimental-async"]
experimental-inspect = ["pyforge/experimental-inspect"]

[dependencies]
pyforge = { path = "../" }

[build-dependencies]
pyforge-build-config = { path = "../pyo3-build-config" }

[lib]
name = "pyo3_pytests"
crate-type = ["cdylib"]

[lints]
workspace = true
