[package]
authors = ["Abdulwahed Mansour"]
name = "clarax-pytests"
version = "0.1.0"
description = "Python-based tests for ClaraX"
edition = "2021"
publish = false
rust-version = "1.83"

[features]
experimental-async = ["clarax/experimental-async"]
experimental-inspect = ["clarax/experimental-inspect"]

[dependencies]
clarax = { path = "../" }

[build-dependencies]
clarax-build-config = { path = "../clarax-build-config" }

[lib]
name = "pyo3_pytests"
crate-type = ["cdylib"]

[lints]
workspace = true
